--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -18,7 +18,7 @@
     <body>
         <div class="heading">
             <div id="one"><a href="/index">Home</a></div>
-            <div id="two"><a href="/weather">Weather</a></div>
+            <div id="two"><a href="/products">Products</a></div>
 
             <div id="three">
                 {% if current_user.is_anonymous %}
