implement Checkout feature

--- a/application/templates/products.html
+++ b/application/templates/products.html
@@ -17,6 +17,7 @@
                     </div>
                 </div>
             {% endfor %}
+            <a href="/checkout"> Checkout </a>
         </div>
 
     {% endblock %}
