--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -16,18 +16,19 @@
 
     </head>
     <body>
-        <div class="heading">
-            <div id="one"><a href="/index">Home</a></div>
-            <div id="two"><a href="/products">Products</a></div>
+        <ul class="heading">
+            <li><a href="/index">Home</a></li>
+            <li><a href="/products">Products</a></li>
+            <li><a href="/cart">Cart</a></li>
 
-            <div id="three">
+            <li>
                 {% if current_user.is_anonymous %}
                 <a href="{{ url_for('login') }}">Login</a>
                 {% else %}
                 <a href="{{ url_for('logout') }}">Logout</a>
                 {% endif %}
-            </div>
-        </div>
+            </li>
+        </ul>
 
         <div class="container">
 
