--- a/application/templates/products.html
+++ b/application/templates/products.html
@@ -7,7 +7,7 @@
             {% for data in products %}
                 <div>
                     <h4>{{data.name}}</h4>
-                    <div>Price: {{data.price}}</div>
+                    <div>Price: ${{data.price}}</div>
                     <div>Stock: {{data.stock}}</div>
 
                     <div>
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             {% endfor %}
-            <a href="/checkout"> Checkout </a>
+            <br><br><a href="/checkout"> Checkout </a>
         </div>
 
     {% endblock %}
